# graspit_bci

./: .gitignore  .gitmodules  README.md  graspit-core.pro  graspit-lib-LINUX.pro  graspit-lib-WINDOWS.pro  graspit.pro  graspit_paths.bash  mk_linux  mk_windows.bat  protobuf.pri  rpcz.pri
cgdb/: README.txt
gen_proto/: Drawable.pb.cc  Drawable.pb.h  GraspitMessage.pb.cc  GraspitMessage.pb.h  gen_cpp_proto.sh
include/: SoRing.h  body.h  graspitGUI.h  graspitProtobufServer.h  graspitServer.h  handView.h  ivmgr.h  robot.h  world.h
include/BCI/: BCIStateMachine.h  bciService.h  onlinePlannerController.h  plannerTools.h  state.h  (+3 more)
protocols/: Drawable.proto  GraspitMessage.proto
qhull/: qhull  rbox
rpcz/graspit_rcpz/cpp/: CMakeLists.txt
rpcz_backup/: CMakeLists.txt
src/: SoRing.cpp  body.cpp  dof.cpp  graspitGUI.cpp  graspitProtobufServer.cpp  graspitServer.cpp  gwsprojection.cpp  handView.cpp  ivmgr.cpp  kinematicChain.cpp  main.cpp  robot.cpp  world.cpp
ui/: images.tmp  mainWindow.cpp  mainWindow.h  mainWindow.ui  qmake_image_collection.cpp
worlds/: allGrasp1.xml  allGrasp2.xml  allVision1.xml  allVision2.xml  allVision2fromjon.xml  barrett.xml  flashLight1.xml  flashLight2.xml  flashLightVision2.xml  flashlightVision1.xml  flask1.xml  flask2.xml  foundObjects.xml  foundObjects2.xml  grarnier1.xml  grarnier2.xml  mico_world.xml  plannerAll.xml  plannerFlashLight.xml  plannerFlask.xml  plannerGarnierShampooBottle.xml  plannerGilletteShavingGel.xml  plannerMug.xml  plannerMug.xml.orig  plannerOdwallaBottle.xml  shaving1.xml  shaving2.xml  testworld.xml
(+174 files in other folders)
